name:                craftingInterpreters
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/craftingInterpreters#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable craftingInterpreters
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Lox.Token
                     , Lox.Error
                     , Lox.Scanner
  build-depends:       base >= 4.7 && < 5
                     , text
                     , bytestring
                     , mtl
                     , containers
                     , monad-loops
